--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -26,6 +26,14 @@ doctype html
     <link rel="shortcut icon" sizes="64x64" href="/images/favicon.png">
 
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-timer/1.3.3/angular-timer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skel/2.2.0/skel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/humanize-duration/3.12.1/humanize-duration.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skel-layers/2.2.0/skel.min.js"></script>
     <script src="js/all.js"></script>
     <script src="https://connect.facebook.net/en_US/all.js#xfbml=1" async defer></script>
     script(type="application/ld+json")
