load icon via https

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -116,7 +116,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     noscript
       img(height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1655374961370442&ev=PageView&noscript=1")
 
-    link(rel="icon" type="image/png" href="http://devternity.com/images/logo_2017_filled.png")
+    link(rel="icon" type="image/png" href="https://devternity.com/images/logo_2017_filled.png")
     link(rel="stylesheet" href="css/remodal.css")
          
     style(type="text/css")
