--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -241,7 +241,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               i.icon.big.rounded.fa-cogs
               h3 Full day of instructor-led workshops
           h2 &nbsp;
-          h2 5 things that make DevTernity awesome
+          h2 Why DevTernity?
           div(class="row 200% why")
             - var index = 1
             each text, title in data.benefits
