--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -6,13 +6,13 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="author" content="DevTernity")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
-    meta(name="description" content="The premium-quality annual international software development conference. DevTernity is a place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
+    meta(name="description" content="The premium-quality annual international software development conference. DevTernity is the place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
     meta(name="keywords" content="software craftsmanship conferences, software development conferences, software developer conferences, developer conference, java conferences")
     meta(name="robots" content="index,follow")
     meta(property="og:url" content="http://devternity.com")
     meta(property="og:type" content="website")
     meta(property="og:title" content="DevTernity")
-    meta(property="og:description" content="The premium-quality annual international software development conference. DevTernity is a place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
+    meta(property="og:description" content="The premium-quality annual international software development conference. DevTernity is the place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
     meta(property="og:image" content="https://devternity.com/images/logo_2017_filled.png")
     meta(property="og:image:width" content="512")
     meta(property="og:image:height" content="512")
@@ -211,12 +211,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             h2
             p 
               | DevTernity does not specialize in a particular framework, technology or language because they come and go. 
-              strong We focus on fundamental building blocks and practices necessary for building better, modern software systems
-              |.
-            h2
-            p 
-              | DevTernity is a place where 
-              strong forward-thinking developers, pragmatic architects and engineering leaders grow
+              strong We focus on the core building blocks and practices necessary for building better, modern software systems
               |.
             p
             h2
