add google site verification meta

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -6,6 +6,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="author" content="DevTernity")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
+    meta(name="google-site-verification" content="b0JWvPtZAQJNl2DMy0flSRjC7xxN9g10Yhu_hSszLLw")
     meta(name="description" content="The premium-quality annual international software development conference. DevTernity is the place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
     meta(name="keywords" content="software craftsmanship conferences, software development conferences, software developer conferences, developer conference, java conferences")
     meta(name="robots" content="index,follow")
@@ -20,6 +21,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     link(rel="shortcut icon" type="image/png" href="images/logo_2017_filled.png")
     link(rel="icon" href="/images/favicon.png")
     link(rel="shortcut icon" sizes="64x64" href="/images/favicon.png")
+
 
     |<!--[if lte IE 8]>
     script(src="css/ie/html5shiv.js")
