fix team image size

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -498,7 +498,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               |  and care 
               i.fa.fa-leaf(style="color: #4dac71" aria-hidden="true")
               |   by the leaders of Latvian software craftsmanship community: 
-            img.lazy(data-src="images/team.jpg")
+            img.lazy(data-src="images/team.jpg" style="width: 100%")
           section(class="6u 12u$(small)")
             h3 
               | Join the community and 
